# commit-cli

./: .commitcli_modules  .commitclirc  .gitignore  README.md  __main__.py  admin.sh  changelog.md  commitclirc  docker-compose.yml  dockerfile  getgitroot.py  license  main.py  makefile  pyproject.toml  readme.md  requirements.in  requirements.txt  runcommitcli.py  setup.py
commitcli/: __init__.py  __main__.py  commit_message.py  commitcli.py  common.py
common/: __init__.py  constants.py  environment.py  functions.py  logger.py  versions.py
configmanager/: config.py  config_manager.py  format_module_manager.py  test_configmanager.py  test_format_module_manager.py
data/: db.py  modules_repository.py
