[project]
name = "commitcli"
version = "1.5.5"
description = "commitcli is a cli to quick format your commits using conventional commits, odoo format or semantic git commits"
license ={ text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'inquirer',
    'click',
    'loguru',
    'pendulum',
    'pygit2==1.13.0',
    'pymongo',
    'python-dotenv'
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
commitcli = "commitcli.commitcli:main"